# MicroServiceTemplate

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
api/: auth.py  config.py  logging.py
api/controller/: user_controller.py
api/model/: user_model.py
api/user/: __init__.py  crud.py
api/utils/: database.py
api/view/: user_view.py
config/: api_conf.py
database/: database.py  user.py
