[tool.poetry]
name = "microservicetemplate"
version = "0.1.0"
description = ""
authors = ["95Marmite <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
SQLAlchemy = "^2.0.15"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
